--- a/css/natural.css
+++ b/css/natural.css
@@ -9,6 +9,10 @@ ul,ol,li{
 a{
     text-emphasis: none;
     outline: 0;
+    font-size:4px;
+    color: white;
+    display: block;
+     
 }
 main{
     width: 100%;
@@ -24,13 +28,19 @@ main header{
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
-    justify-content: center;
+    justify-content: space-between;
     position: relative;
     z-index: 3;
     /* border: 10px solid pink; */
+    flex-direction: column;
 }
 
+header {}
+
+header {}
+
 main header h1{
+    display: block;
     font-size: 0px;
     color: #fff;
 }
@@ -179,7 +189,52 @@ main section article:hover .inner figure{
 }
 
 
-
+main aside{
+    width: 100%;
+    height: 100vh;
+    background: #222;
+    position: absolute;
+    top: 0px;
+    left: -100%;
+    opacity: 0;
+    z-index: 2;
+    box-sizing: border-box;
+    padding: 20vh 7vw 14vh 20vw;
+    display: flex;
+    justify-content: space-between;
+    transition: 1s;
+}
+main aside.on{
+    opacity: 1;
+    left: 0%;
+}
+main aside .txt{
+    width: 25%;
+    height: 100%;
+}
+main aside .txt h1{
+    font: normal 4vw/1 "Arial";
+    color: #ddd;
+    margin-bottom: 20px;
+}
+main aside .txt p{
+    font : 1.1vw/1.3 "Arial";
+    color: #666;
+    margin-bottom: 60px;
+}
+main aside .txt span{
+    cursor: pointer;
+    color: orange;
+}
+main aside figure{
+    width: 72%;
+    height: 100%;
+}
+main aside figure video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 
 
